force-app/main/default/objects/Processo_Judicial__c/Processo_Judicial__c.object-meta.xml
<CustomObject>
    <label>Processo Judicial</label>
    <nameField>
        <label>Nº</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processos Judiciais</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>