force-app/main/default/objects/Processo_Judicial__c/fields/Adverso_Principal__c.field-meta.xml
<CustomField>
    <fullName>Adverso_Principal__c</fullName>
    <label>Réu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>