force-app/main/default/objects/Processo_Judicial__c/fields/Atualizacao_Buscar__c.field-meta.xml
<CustomField>
    <fullName>Atualizacao_Buscar__c</fullName>
    <label>Atualização Buscar</label>
    <type>DateTime</type>
</CustomField>