force-app/main/default/objects/Processo_Judicial__c/fields/Buscar__c.field-meta.xml
<CustomField>
    <fullName>Buscar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buscar</label>
    <type>Checkbox</type>
</CustomField>