force-app/main/default/objects/Processo_Judicial__c/fields/Causa_raiz_1__c.field-meta.xml
<CustomField>
    <fullName>Causa_raiz_1__c</fullName>
    <label>Causa raiz 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>