force-app/main/default/objects/Processo_Judicial__c/fields/Cliente_Principal__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Principal__c</fullName>
    <label>Autor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>