force-app/main/default/objects/Processo_Judicial__c/fields/Data_de_inicio__c.field-meta.xml
<CustomField>
    <fullName>Data_de_inicio__c</fullName>
    <label>Data de início</label>
    <type>Date</type>
</CustomField>