force-app/main/default/objects/Processo_Judicial__c/fields/ID_Processo__c.field-meta.xml
<CustomField>
    <fullName>ID_Processo__c</fullName>
    <label>ID Processo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>