force-app/main/default/objects/Processo_Judicial__c/fields/Indice_de_atualizacao__c.field-meta.xml
<CustomField>
    <fullName>Indice_de_atualizacao__c</fullName>
    <label>Índice de atualização</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Indice_de_Atualizacao_Monetaria</valueSetName>
    </valueSet>
</CustomField>