force-app/main/default/objects/Processo_Judicial__c/fields/Jurisdicao_atual__c.field-meta.xml
<CustomField>
    <fullName>Jurisdicao_atual__c</fullName>
    <label>Jurisdição atual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>