force-app/main/default/objects/Processo_Judicial__c/fields/Link_de_acesso__c.field-meta.xml
<CustomField>
    <fullName>Link_de_acesso__c</fullName>
    <formula>HYPERLINK(&quot;https://hospcom.projuris.com.br/#/processo/show/&quot; +  ID_Processo__c , &quot;Clique aqui para abrir no Projuris&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link de acesso</label>
    <type>Text</type>
</CustomField>