force-app/main/default/objects/Processo_Judicial__c/fields/Natureza_financeira__c.field-meta.xml
<CustomField>
    <fullName>Natureza_financeira__c</fullName>
    <label>Natureza financeira</label>
    <length>255</length>
    <type>Text</type>
</CustomField>