force-app/main/default/objects/Processo_Judicial__c/fields/Notificar__c.field-meta.xml
<CustomField>
    <fullName>Notificar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificar</label>
    <type>Checkbox</type>
</CustomField>