force-app/main/default/objects/Processo_Judicial__c/fields/Pedido_de_liminar2__c.field-meta.xml
<CustomField>
    <fullName>Pedido_de_liminar2__c</fullName>
    <formula>IF(Pedido_de_liminar__c	== true, &apos;SIM&apos;,&apos;NÃO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pedido de liminar</label>
    <type>Text</type>
</CustomField>