force-app/main/default/objects/Processo_Judicial__c/fields/Pedido_de_liminar__c.field-meta.xml
<CustomField>
    <fullName>Pedido_de_liminar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pedido de liminar</label>
    <type>Checkbox</type>
</CustomField>