force-app/main/default/objects/Processo_Judicial__c/fields/Procedimento__c.field-meta.xml
<CustomField>
    <fullName>Procedimento__c</fullName>
    <label>Procedimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>