force-app/main/default/objects/Processo_Judicial__c/fields/Tipo_da_acao__c.field-meta.xml
<CustomField>
    <fullName>Tipo_da_acao__c</fullName>
    <label>Tipo da ação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>