force-app/main/default/objects/Processo_Judicial__c/fields/Tipo_de_processo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_processo__c</fullName>
    <label>Tipo de processo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>