force-app/main/default/objects/Processo_Judicial__c/fields/Total_de_ganhos__c.field-meta.xml
<CustomField>
    <fullName>Total_de_ganhos__c</fullName>
    <label>Total de ganhos</label>
    <summarizedField>Lancamento_Financeiro__c.Valor__c</summarizedField>
    <summaryFilterItems>
        <field>Lancamento_Financeiro__c.Tipo_de_Lan_amento__c</field>
        <operation>equals</operation>
        <value>Ganho</value>
    </summaryFilterItems>
    <summaryForeignKey>Lancamento_Financeiro__c.Processo_Judicial__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>