force-app/main/default/objects/Processo_Judicial__c/fields/Valor_da_causa__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_causa__c</fullName>
    <label>Valor da causa</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>