force-app/main/default/objects/Processo_Judicial__c/validationRules/Notificar.validationRule-meta.xml
<ValidationRule>
    <fullName>Notificar</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Indice_de_atualizacao__c) == &apos;&apos;,
Notificar__c == true
)</errorConditionFormula>
    <errorDisplayField>Indice_de_atualizacao__c</errorDisplayField>
    <errorMessage>Escolha um índice de atualização para ativar as notificações do processo.</errorMessage>
</ValidationRule>