force-app/main/default/objects/Processo_Judicial__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cliente_Principal__c</columns>
    <columns>Adverso_Principal__c</columns>
    <columns>Data_de_inicio__c</columns>
    <columns>Natureza__c</columns>
    <columns>Tipo_da_acao__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Valor_da_causa__c</columns>
    <columns>Indice_de_atualizacao__c</columns>
    <columns>Valor_atualizado__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
    <language>pt_BR</language>
</ListView>